--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "stephsen",
   "license": "ISC",
   "dependencies": {
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "express": ""
   }
 }
